Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9266

Creating index on temporaray table breaks replication

    XMLWordPrintable

Details

    • 10.2.11, 10.2.12, 10.0.34, 10.2.14, 10.1.32

    Description

      Creating an index on temporary table breaks (row based) replication.

      On the master execute the following SQL statements:

      create temporary table TMP_FOO( bar int not null) engine=memory;
      create index tmp_idx01 on TMP_FOO(bar);
      

      On the slave we get the following error:

      Error 'Table 'mmm_data.TMP_FOO' doesn't exist' on query. Default database: 'mmm_data'. Query: 'create index tmp_idx01 on TMP_FOO(bar)'
      

      Configuration of master:

      log-bin                         = mysql-bin
      server-id                       = 4
      log_bin_trust_function_creators = 1
      binlog_format                   = row
      slave_compressed_protocol       = 1
      #sync_binlog                    = 1
      expire_logs_days                = 35
      binlog-ignore-db                = mmm_temp
      

      Configuration of slave:

      server-id                       = 5
      log_bin_trust_function_creators = 1
      log-bin                         = myslave2-bin
      relay-log                       = myslave2-relay-bin
      binlog_format                   = row
      log-slave-updates               = 1
      sync_binlog                     = 1
      expire_logs_days                = 35
      slave_compressed_protocol       = 1
      

      Work a round: On the slave set slave-skip-errors in my.cnf:

      slave-skip-errors = 1146
      

      Note: The master and slave server run the same OS and MariaDB versions.

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              water P.R. Water
              Votes:
              7 Vote for this issue
              Watchers:
              14 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: