MDEV-9266 Creating index on temporaray table breaks replication

Problem:- Create index was logged into binlog.

Goal:- Operation on temporary table should not be binlog when binlog format
is row.

Solution:-
1st- We should add CF_FORCE_ORIGINAL_BINLOG_FORMAT when there
 is ddl on temp table.
2nd- For optimize, analyze and repair we dont check if binlog format is row
 and this is tmp table, we dont need to log that.